# parallel-quickselect

./: .cproject  .gitignore  .gitignore~  .project  CMakeLists.txt  README.md  README.md~
src/: main.cpp  parqselect.hpp  quickselect.hpp
